Hands-on 4/E1_Identificadores no declarados/parser.output
Grammar

    0 $accept: programa $end

    1 programa: declaraciones usos

    2 declaraciones: INT ID PUNTOYCOMA
    3              | declaraciones INT ID PUNTOYCOMA

    4 usos: ID PUNTOYCOMA
    5     | usos ID PUNTOYCOMA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <str> (258) 2 3 4 5
    INT (259) 2 3
    PUNTOYCOMA (260) 2 3 4 5


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    programa (7)
        on left: 1
        on right: 0
    declaraciones (8)
        on left: 2 3
        on right: 1 3
    usos (9)
        on left: 4 5
        on right: 1 5


State 0

    0 $accept: • programa $end

    INT  shift, and go to state 1

    programa       go to state 2
    declaraciones  go to state 3


State 1

    2 declaraciones: INT • ID PUNTOYCOMA

    ID  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    1 programa: declaraciones • usos
    3 declaraciones: declaraciones • INT ID PUNTOYCOMA

    ID   shift, and go to state 6
    INT  shift, and go to state 7

    usos  go to state 8


State 4

    2 declaraciones: INT ID • PUNTOYCOMA

    PUNTOYCOMA  shift, and go to state 9


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    4 usos: ID • PUNTOYCOMA

    PUNTOYCOMA  shift, and go to state 10


State 7

    3 declaraciones: declaraciones INT • ID PUNTOYCOMA

    ID  shift, and go to state 11


State 8

    1 programa: declaraciones usos •
    5 usos: usos • ID PUNTOYCOMA

    ID  shift, and go to state 12

    $default  reduce using rule 1 (programa)


State 9

    2 declaraciones: INT ID PUNTOYCOMA •

    $default  reduce using rule 2 (declaraciones)


State 10

    4 usos: ID PUNTOYCOMA •

    $default  reduce using rule 4 (usos)


State 11

    3 declaraciones: declaraciones INT ID • PUNTOYCOMA

    PUNTOYCOMA  shift, and go to state 13


State 12

    5 usos: usos ID • PUNTOYCOMA

    PUNTOYCOMA  shift, and go to state 14


State 13

    3 declaraciones: declaraciones INT ID PUNTOYCOMA •

    $default  reduce using rule 3 (declaraciones)


State 14

    5 usos: usos ID PUNTOYCOMA •

    $default  reduce using rule 5 (usos)
